--- a/src/app/component/my-history/my-history.component.html
+++ b/src/app/component/my-history/my-history.component.html
@@ -1,47 +1,69 @@
-<table *ngIf="roleName == 'Student'" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div *ngIf="roleName == 'Student'">
+  <mat-form-field class="example-form-field" appearance="fill">
+    <mat-label>Enter a date range</mat-label>
+    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+      <input matStartDate placeholder="Start date" formControlName="start">
+      <input matEndDate placeholder="End date" formControlName="end">
+    </mat-date-range-input>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-date-range-picker #picker></mat-date-range-picker>
+    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+  </mat-form-field>
+  <!-- <div>
+    {{range.value.start}}
+    {{range.value.end}}
 
-  <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+  </div> -->
+  <button (click)="callDataForTeacher()" mat-raised-button color="primary">Search</button>
+
+  <mat-form-field class="filter">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder=" student id" #input>
+  </mat-form-field>
+
 
   <!-- Position Column -->
-  <ng-container matColumnDef="Score">
-    <th mat-header-cell *matHeaderCellDef> Score </th>
-    <td mat-cell *matCellDef="let element"> {{element.scoreResult}} </td>
-  </ng-container>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="Score">
+      <th mat-header-cell *matHeaderCellDef> Score </th>
+      <td mat-cell *matCellDef="let element"> {{element.scoreResult}} </td>
+    </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="Level">
-    <th mat-header-cell *matHeaderCellDef> Level </th>
-    <td mat-cell *matCellDef="let element"> {{element.levelResult}} </td>
-  </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="Level">
+      <th mat-header-cell *matHeaderCellDef> Level </th>
+      <td mat-cell *matCellDef="let element"> {{element.levelResult}} </td>
+    </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="Comment">
-    <th mat-header-cell *matHeaderCellDef> Comment </th>
-    <td mat-cell *matCellDef="let element">{{element.Comment}}
+    <!-- Weight Column -->
+    <ng-container matColumnDef="Comment">
+      <th mat-header-cell *matHeaderCellDef> Comment </th>
+      <td mat-cell *matCellDef="let element">{{element.Comment}}
 
-    </td>
-  </ng-container>
+      </td>
+    </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="Last Updated">
-    <th mat-header-cell *matHeaderCellDef> Updated test </th>
-    <td mat-cell *matCellDef="let element">
-      {{this.moment(convertToUTC(element.lastUpdated? element.lastUpdated:"-")).format("DD/MM/yyyy HH:mm")}}
-    </td>
-  </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Last Updated">
+      <th mat-header-cell *matHeaderCellDef> Updated test </th>
+      <td mat-cell *matCellDef="let element">
+        {{this.moment(convertToUTC(element.lastUpdated? element.lastUpdated:"-")).format("DD/MM/yyyy HH:mm")}}
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="Test Date">
-    <th mat-header-cell *matHeaderCellDef> Date of test </th>
-    <td mat-cell *matCellDef="let element">
-      {{this.moment(convertToUTC(element.testDate? element.testDate:"-")).format("DD/MM/yyyy HH:mm")}} </td>
-  </ng-container>
+    <ng-container matColumnDef="Test Date">
+      <th mat-header-cell *matHeaderCellDef> Date of test </th>
+      <td mat-cell *matCellDef="let element">
+        {{this.moment(convertToUTC(element.testDate? element.testDate:"-")).format("DD/MM/yyyy HH:mm")}} </td>
+    </ng-container>
 
 
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
 
 <div *ngIf="roleName == 'Teacher'">
   <mat-form-field class="example-form-field" appearance="fill">
@@ -86,7 +108,8 @@
     <!-- Weight Column -->
     <ng-container matColumnDef="Comment">
       <th mat-header-cell *matHeaderCellDef> follow up </th>
-      <td mat-cell *matCellDef="let element"> <button mat-raised-button (click)="openDialog()">Comment</button> </td>
+      <td mat-cell *matCellDef="let element"> <button mat-raised-button
+          (click)="openDialog(element.userId)">Comment</button> </td>
 
     </ng-container>
 
@@ -108,4 +131,5 @@
     <tr mat-header-row *matHeaderRowDef="displayColumnsForTeacher"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumnsForTeacher;"></tr>
   </table>
+
 </div>
