--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -2,43 +2,35 @@
 <!-- toggle and nav items -->
 <!-- ============================================================== -->
 <ul class="navbar-nav float-start me-auto">
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark " href="/dashboard" style="color:black"> Dashboard </a>
+  <li class="nav-item" >
+    <a class="nav-link waves-effect waves-dark" href="/dashboard" style="color: black">
+      Dashboard
+    </a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/about" style="color:black"> About </a>
+  <li class="nav-item" *ngIf="!guardrole">
+    <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color: black">
+      Depression Test
+    </a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color:black"> Depression Test </a>
+  <li class="nav-item" *ngIf="!guardrole">
+    <a class="nav-link waves-effect waves-dark" href="/about" style="color: black">
+      About
+    </a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/scoreResult" style="color:black"> Test result</a>
-  </li>
-
-  <!-- ============================================================== -->
-  <!-- create new -->
-  <!-- ============================================================== -->
-
 </ul>
-<!-- ============================================================== -->
-<!-- Right side toggle and nav items -->
-<!-- ============================================================== -->
+
 <ul class="navbar-nav float-end">
-  <!-- ============================================================== -->
-  <!-- User profile and search -->
-  <!-- ============================================================== -->
   <li class="nav-item" ngbDropdown placement="bottom-end">
     <a ngbDropdownToggle class="nav-link waves-effect waves-dark pro-pic" href="javascript:void(0)"
       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <img src="assets/images/users/user1.jpg" alt="user" class="rounded-circle" width="31" />
-      <span class="ms-2" style="color:black">{{fName}} {{lName}}</span>
+      <span class="ms-2" style="color: black">{{ fName }} {{ lName }}</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" href="/profile-info"> My Profile</a>
       <a class="dropdown-item" href="/myhistory"> My History</a>
       <div class="dropdown-divider"></div>
-      <button class="dropdown-item" (click)="logout()"> Logout</button>
-
+      <button class="dropdown-item" (click)="logout()">Logout</button>
     </div>
   </li>
   <!-- ============================================================== -->
